***************************
Python WMI Module - CHANGES
***************************

What is it?
===========

The Python WMI module is a lightweight wrapper on top of the pywin32
extensions, and hides some of the messy plumbing needed to get Python to
talk to the WMI API. It's pure Python and should work with any version of
Python from 2.1 onwards (list comprehensions) and any recent version of 
pywin32.


Where do I get it?
==================

http://timgolden.me.uk/python/wmi.html


What's Changed?
===============

10th Feb 2006 1.0rc5 . Fixed small bug in .new method of _wmi_class
10th Feb 2006 1.0rc4 . Added from_time function to convert Python times to WMI
                     . Remove final Put_ from .new method as some classes are
                       not intended to be created (eg Win32_ProcessStartup).
                     . Add .put method to allow explicit instance creation.
                     . Allow user to prevent the namespace from searching for
                       valid classes at startup. This makes the startup
                       much faster, but means you don't get a list of classes.
29th Nov 2005 1.0rc3 . Small changes to allow array of output parameters
                     . Added qualifiers to list of private attributes
                     . Added details of required privs to method docstring
                     . Fixed long-standing bug in Usage example
                     . Added provenance to WMI methods from MappingStrings
26th Oct 2005 1.0rc2 . Corrected __repr__ in _wmi_namespace
18th Oct 2005 1.0rc1 . Refactored into namespace, class, object classes.
                     . This makes it easier to use certain things, such
                       as the StdRegProv's registry object, and the XP
                       SystemRestore functionality.
                     . Added CompareTo_ to support __eq__ functionality.
                     . Added username/password support to WMI connection.